typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__input_type__tests__post input type for create.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/input_type.rs
expression: "tree::print(ctx.generate(&InputType::for_create(post))?)"
---
root: struct '_Post_CreateInput' #41
├─ [id]: optional #32
│  └─ item: integer #5
├─ [title]: string #6
└─ [author]: optional #40
   └─ item: struct #39
      ├─ [create]: optional '_37__User_CreateInput_excluding___rel_Post_User_2?' #37
      │  └─ item: struct '_User_CreateInput_excluding___rel_Post_User_2' #33
      │     ├─ [id]: integer #0
      │     └─ [name]: string #1
      └─ [connect]: optional '_38_UserWhere_norel?' #38
         └─ item: struct 'UserWhere_norel' #36
            ├─ [id]: optional #34
            │  └─ item: integer #0
            └─ [name]: optional #35
               └─ item: string #1

