typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__input_type__tests__post input type for update.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/input_type.rs
expression: "tree::print(ctx.generate(&InputType::for_update(post))?)"
---
root: struct '_Post_UpdateInput' #48
├─ [id]: optional #42
│  └─ item: integer #5
├─ [title]: optional #43
│  └─ item: string #6
└─ [author]: optional #47
   └─ item: struct #46
      ├─ [create]: optional '_44__User_CreateInput_excluding___rel_Post_User_2?' #44
      │  └─ item: struct '_User_CreateInput_excluding___rel_Post_User_2' #33
      │     ├─ [id]: integer #0
      │     └─ [name]: string #1
      └─ [connect]: optional '_45_UserWhere_norel?' #45
         └─ item: struct 'UserWhere_norel' #36
            ├─ [id]: optional #34
            │  └─ item: integer #0
            └─ [name]: optional #35
               └─ item: string #1

