typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__input_type__tests__user input type for create.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/input_type.rs
expression: "tree::print(ctx.generate(&InputType::for_create(user))?)"
---
root: struct '_User_CreateInput' #21
├─ [id]: integer #0
├─ [name]: string #1
└─ [posts]: optional #20
   └─ item: struct #19
      ├─ [create]: optional '_14__Post_CreateInput_excluding___rel_Post_User_2?' #14
      │  └─ item: struct '_Post_CreateInput_excluding___rel_Post_User_2' #10
      │     ├─ [id]: optional #9
      │     │  └─ item: integer #5
      │     └─ [title]: string #6
      ├─ [connect]: optional '_15_PostWhere_norel?' #15
      │  └─ item: struct 'PostWhere_norel' #13
      │     ├─ [id]: optional #11
      │     │  └─ item: integer #5
      │     └─ [title]: optional #12
      │        └─ item: string #6
      └─ [createMany]: optional #18
         └─ item: struct #17
            └─ [data]: array '_16__Post_CreateInput_excluding___rel_Post_User_2[]' #16
               └─ item: struct '_Post_CreateInput_excluding___rel_Post_User_2' #10
                  ├─ [id]: optional #9
                  │  └─ item: integer #5
                  └─ [title]: string #6

