typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__input_type__tests__user input type for update.snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/input_type.rs
expression: "tree::print(ctx.generate(&InputType::for_update(user))?)"
---
root: struct '_User_UpdateInput' #31
├─ [id]: optional #22
│  └─ item: integer #0
├─ [name]: optional #23
│  └─ item: string #1
└─ [posts]: optional #30
   └─ item: struct #29
      ├─ [create]: optional '_24__Post_CreateInput_excluding___rel_Post_User_2?' #24
      │  └─ item: struct '_Post_CreateInput_excluding___rel_Post_User_2' #10
      │     ├─ [id]: optional #9
      │     │  └─ item: integer #5
      │     └─ [title]: string #6
      ├─ [connect]: optional '_25_PostWhere_norel?' #25
      │  └─ item: struct 'PostWhere_norel' #13
      │     ├─ [id]: optional #11
      │     │  └─ item: integer #5
      │     └─ [title]: optional #12
      │        └─ item: string #6
      └─ [createMany]: optional #28
         └─ item: struct #27
            └─ [data]: array '_26__Post_CreateInput_excluding___rel_Post_User_2[]' #26
               └─ item: struct '_Post_CreateInput_excluding___rel_Post_User_2' #10
                  ├─ [id]: optional #9
                  │  └─ item: integer #5
                  └─ [title]: string #6

